# tabletimepro-tournaments

tabletimepro-tournaments/: README.md  netlify.toml
tabletimepro-tournaments/apps/web/: Dockerfile  netlify.toml  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
tabletimepro-tournaments/apps/web/app/: globals.css  layout.tsx  page.tsx
tabletimepro-tournaments/apps/web/app/[tenantId]/display/: page.tsx
tabletimepro-tournaments/apps/web/app/[tenantId]/new/: page.tsx
tabletimepro-tournaments/apps/web/app/[tenantId]/tournament/preview/: page.tsx
tabletimepro-tournaments/apps/web/components/: Bracket.tsx  BrandHeader.tsx  CalcuttaPanel.tsx  DisplayBoard.tsx  PayoutTable.tsx
tabletimepro-tournaments/apps/web/lib/: tournamentStore.tsx
tabletimepro-tournaments/devops/: docker-compose.yml
tabletimepro-tournaments/docs/: api.md  calcutta.md  data-model.md  integration-tabletimepro.md  payout-schemes.md  tv-display.md
tabletimepro-tournaments/docs/adr/: ADR-0001-architecture.md
tabletimepro-tournaments/services/api/: Dockerfile  README.md  pyproject.toml
tabletimepro-tournaments/services/api/app/: db.py  main.py  models.py
